# vip-music-decoder

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
src/: decoder.hpp  main.cpp
src-ncm/: aes.cpp  decoder.hpp  main.cpp
src-qmc/: main.cpp
